# HRMS-gagan

./: .gitignore  .pre-commit-config.yaml  Makefile  db.sqlite3  pyproject.toml  readme.MD  requirements.txt
HRMS/: settings.py  urls.py
api/: serializers.py  urls.py  views.py
portal/: admin.py  forms.py  models.py  urls.py  views.py
portal/migrations/: 0001_initial.py  0002_remove_leaverequest_comments_and_more.py
portal/templates/Registration/: login.html  signup.html
portal/templates/portal/: applied.html  base.html  employee_leave_request.html  employee_page.html  home.html  manager_leave_approval.html  manager_page.html  status.html
